apply plugin: 'com.android.application'


// Branch, Commit und Commit-Zeit für die Info-Zeile im Test-Build. Läuft zur
// Configuration-Time; schlägt git fehl (kein git, kein Repo, Export ohne .git),
// darf das den Build nicht abbrechen.
// providers.exec und nicht ProcessBuilder: einen Prozess direkt zu starten macht
// die Konfiguration inkompatibel zum Configuration-Cache (dann bricht der Build
// mit "external process started" ab, sobald jemand --configuration-cache setzt).
def git(String... args) {
    try {
        def result = providers.exec {
            commandLine(["git"] + (args as List))
            workingDir = rootDir
            ignoreExitValue = true
        }
        if (result.result.get().exitValue != 0) {
            return ""
        }
        return result.standardOutput.asText.get().trim()
    } catch (Exception e) {
        return ""
    }
}

def buildInfo = {
    def hash = git("rev-parse", "--short", "HEAD")
    if (hash.isEmpty()) {
        return ""
    }
    // Uncommittete Änderungen markieren - sonst behauptet die Zeile einen Stand,
    // den das APK gar nicht enthält.
    if (!git("status", "--porcelain").isEmpty()) {
        hash += "+"
    }
    // Bei detached HEAD (so checkt die CI aus) liefert --abbrev-ref nur "HEAD".
    // Dann bleibt nur GITHUB_REF_NAME - kein git name-rev: das nennt irgendeinen
    // erreichbaren Ref und liefert Namen wie "tags/v1.0~1" oder "undefined", also
    // lieber gar keinen Branch als einen falschen.
    def branch = git("rev-parse", "--abbrev-ref", "HEAD")
    if (branch.isEmpty() || branch == "HEAD") {
        branch = System.getenv("GITHUB_REF_NAME") ?: ""
    }
    def date = git("log", "-1", "--format=%cd", "--date=format:%Y-%m-%d %H:%M")
    // Der Wert landet in generiertem Java-Code, also nur Unverfängliches durchlassen.
    return (branch + "  " + hash + "  " + date).trim().replaceAll("[^A-Za-z0-9._/+: -]", "")
}()

// https://developer.android.com/studio/publish/app-signing
def keystorePropertiesFile = new File(System.getProperty("user.home"),"keystore.properties")
def keystoreProperties = new Properties()
if (keystorePropertiesFile.canRead()) {
    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
}

android {
    namespace = "de.pskiwi.avrremote"
    compileSdk 36

    defaultConfig {
        applicationId "de.pskiwi.avrremote"
        minSdk 24
        targetSdk 36
        // Leer = keine Info-Zeile. Nur der Debug-Build füllt das, siehe unten.
        buildConfigField "String", "BUILD_INFO", "\"\""
    }

    buildFeatures {
        buildConfig = true
    }

    // Kein Zugriff auf buildTypes.release hier - der steht unten im signingConfig-if.
    buildTypes {
        debug {
            buildConfigField "String", "BUILD_INFO", "\"" + buildInfo + "\""
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    lint {
        abortOnError = false
    }

    def fromEnv=System.getenv("KEY_PASSWORD")!=null && !System.getenv("KEY_PASSWORD").trim().isEmpty()
    if (keystorePropertiesFile.canRead() || fromEnv) {
        signingConfigs {
            release {
                if (fromEnv) {
                    keyAlias System.getenv("KEY_ALIAS")
                    keyPassword System.getenv("KEY_PASSWORD")
                    storeFile file(System.getenv("STORE_FILE"))
                    storePassword System.getenv("STORE_PASSWORD")
                } else {
                    keyAlias keystoreProperties['keyAlias']
                    keyPassword keystoreProperties['keyPassword']
                    storeFile file(keystoreProperties['storeFile'])
                    storePassword keystoreProperties['storePassword']

                }
            }
        }

        buildTypes {
            release {
                signingConfig signingConfigs.release
            }
        }
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

// ModelConfiguratorTest liest lists.xml direkt von der Platte, nicht über den
// Classpath. Ohne diese Zeile hält Gradle den Test für aktuell, wenn genau die
// Datei sich ändert, um die es dabei geht.
tasks.withType(Test).configureEach {
    inputs.file("src/main/res/values/lists.xml")
}


